update the creat user route
